; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_transmit.c_SendCopyDone.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_transmit.c_SendCopyDone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32* }

@WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"could not flush copy start data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @SendCopyDone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SendCopyDone() #0 {
  %1 = alloca %struct.TYPE_4__, align 8
  %2 = alloca i32, align 4
  %3 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %3, i8 0, i64 24, i1 false)
  store i32 0, i32* %2, align 4
  %4 = call i32 @pq_beginmessage(%struct.TYPE_4__* %1, i8 signext 99)
  %5 = call i32 @pq_endmessage(%struct.TYPE_4__* %1)
  %6 = call i32 (...) @pq_flush()
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %0
  %10 = load i32, i32* @WARNING, align 4
  %11 = call i32 @errmsg(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @ereport(i32 %10, i32 %11)
  br label %13

13:                                               ; preds = %9, %0
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @pq_beginmessage(%struct.TYPE_4__*, i8 signext) #2

declare dso_local i32 @pq_endmessage(%struct.TYPE_4__*) #2

declare dso_local i32 @pq_flush(...) #2

declare dso_local i32 @ereport(i32, i32) #2

declare dso_local i32 @errmsg(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
